--- a/ddh/gui/designer_main.ui
+++ b/ddh/gui/designer_main.ui
@@ -170,7 +170,7 @@
            </layout>
           </item>
           <item row="0" column="0" colspan="4">
-           <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,1,0,4,0,1,0,2,0,1,0,2,0">
+           <layout class="QHBoxLayout" name="horizontalLayout_4" stretch="0,1,0,4,0,1,0,3,0,1,0,1,0">
             <item>
              <spacer name="horizontalSpacer_16">
               <property name="orientation">
@@ -330,6 +330,12 @@
             </item>
             <item>
              <widget class="QLabel" name="lbl_net_txt">
+              <property name="font">
+               <font>
+                <pointsize>16</pointsize>
+                <italic>true</italic>
+               </font>
+              </property>
               <property name="frameShape">
                <enum>QFrame::NoFrame</enum>
               </property>
