--- a/ddh/gui/designer_main.ui
+++ b/ddh/gui/designer_main.ui
@@ -330,12 +330,6 @@
             </item>
             <item>
              <widget class="QLabel" name="lbl_net_txt">
-              <property name="font">
-               <font>
-                <pointsize>16</pointsize>
-                <italic>true</italic>
-               </font>
-              </property>
               <property name="frameShape">
                <enum>QFrame::NoFrame</enum>
               </property>
@@ -343,7 +337,7 @@
                <string/>
               </property>
               <property name="scaledContents">
-               <bool>true</bool>
+               <bool>false</bool>
               </property>
               <property name="alignment">
                <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
