--- a/ddh/gui/designer_main.ui
+++ b/ddh/gui/designer_main.ui
@@ -630,70 +630,6 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="tab_plots">
-       <attribute name="title">
-        <string> Plots</string>
-       </attribute>
-       <layout class="QVBoxLayout" name="verticalLayout_4">
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
-        <item>
-         <widget class="QLabel" name="lbl_plt_msg">
-          <property name="font">
-           <font>
-            <pointsize>20</pointsize>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">background: lightyellow;</string>
-          </property>
-          <property name="frameShape">
-           <enum>QFrame::Box</enum>
-          </property>
-          <property name="text">
-           <string>msg_plt</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-          <property name="wordWrap">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLabel" name="lbl_plt_bsy">
-          <property name="font">
-           <font>
-            <pointsize>36</pointsize>
-            <weight>75</weight>
-            <bold>true</bold>
-           </font>
-          </property>
-          <property name="text">
-           <string>...</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <layout class="QVBoxLayout" name="vl_3">
-          <property name="spacing">
-           <number>0</number>
-          </property>
-          <property name="sizeConstraint">
-           <enum>QLayout::SetDefaultConstraint</enum>
-          </property>
-          <property name="leftMargin">
-           <number>0</number>
-          </property>
-         </layout>
-        </item>
-       </layout>
-      </widget>
       <widget class="QWidget" name="tab_setup">
        <attribute name="title">
         <string> Setup</string>
@@ -827,7 +763,7 @@
                </widget>
               </item>
               <item row="3" column="1">
-               <widget class="QComboBox" name="cb_plot_type"/>
+               <widget class="QComboBox" name="cbox_gear_type"/>
               </item>
               <item row="0" column="0">
                <widget class="QLabel" name="label_5">
