--- a/ddh/gui/designer_main.ui
+++ b/ddh/gui/designer_main.ui
@@ -41,7 +41,7 @@
        </font>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="tab">
        <property name="sizePolicy">
@@ -55,7 +55,7 @@
        </attribute>
        <layout class="QHBoxLayout" name="horizontalLayout_10">
         <item>
-         <layout class="QGridLayout" name="gridLayout" rowstretch="1,1,1,6,1,1" columnstretch="0,0,0,0">
+         <layout class="QGridLayout" name="gridLayout" rowstretch="1,1,1,8,1,1" columnstretch="0,0,0,0">
           <item row="2" column="3">
            <spacer name="horizontalSpacer_6">
             <property name="orientation">
@@ -151,6 +151,9 @@
           </item>
           <item row="4" column="1">
            <layout class="QHBoxLayout" name="horizontalLayout_8" stretch="1,3,1">
+            <property name="spacing">
+             <number>6</number>
+            </property>
             <item>
              <spacer name="horizontalSpacer_18">
               <property name="orientation">
@@ -490,7 +493,7 @@
             <property name="sizeHint" stdset="0">
              <size>
               <width>20</width>
-              <height>10</height>
+              <height>5</height>
              </size>
             </property>
            </spacer>
