--- a/ddh/gui/designer_main.ui
+++ b/ddh/gui/designer_main.ui
@@ -41,7 +41,7 @@
        </font>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="tab">
        <property name="sizePolicy">
@@ -1296,7 +1296,7 @@ font: 19pt &quot;DejaVu Sans&quot;;</string>
              <enum>QAbstractItemView::SelectRows</enum>
             </property>
             <property name="sortingEnabled">
-             <bool>true</bool>
+             <bool>false</bool>
             </property>
             <property name="wordWrap">
              <bool>false</bool>
